[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asken"
version = "1.0.0"
description = "Modern async Python HTTP client. Zero dependencies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["http", "async", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/Cristavee/Asken"
Issues = "https://github.com/Cristavee/Asken/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["asken*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
